<?xml version="1.0"?>
<package format="3">
  <name>graceful_controller</name>
  <version>0.2.2</version>
  <description>
    A controller.
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>angles</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
