<?xml version="1.0"?>
<package format="3">
  <name>graceful_controller</name>
  <version>0.4.5</version>
  <description>
    A controller.
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <depend>roscpp</depend>
  
</package>
