<?xml version="1.0"?>
<package format="3">
  <name>graceful_controller_ros</name>
  <version>0.4.2</version>
  <description>
    A controller. Some say it might be graceful.
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>base_local_planner</depend>
  <depend>geometry_msgs</depend>
  <depend>graceful_controller</depend>
  <depend>nav_2d_utils</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/plugins.xml" />
  </export>

</package>
