<?xml version="1.0"?>
<package format="3">
  <name>graceful_controller_ros</name>
  <version>0.3.1</version>
  <description>
    A controller. Some say it might be graceful.
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="mfergs7@gmail.com">Michael Ferguson</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>graceful_controller</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <nav_core plugin="${prefix}/plugins.xml" />
  </export>

</package>
